test/tests/operators/fork/error_bytes_output.txt
error: subpipeline must end in a sink
 --> tests/operators/fork/error_bytes_output.tql:6:6
  |
6 | fork { write_json }
  |      ^^^^^^^^^^^^^^ 
  |
